Arreglar index y pets.hbs

--- a/views/pet.hbs
+++ b/views/pet.hbs
@@ -15,5 +15,12 @@
     {{else}}
     <h3>NO EXISTE LA MASCOTA QUE BUSCAS</h3>
     {{/if}}
+
+
+    <nav>
+        <form action="/users/logout">
+            <input type="submit" value="logout">
+        </form>
+    </nav>
 </body>
 </html>
