--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,20 +5,8 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-    <h1>Todas las mascotas de UpgradePets</h1>
-    <ul>
-        {{#each pets}}
-        <li>
-            <h3>Name: {{uppercase this.name}}</h3>
-            <h3>Age: {{this.age}}</h3>
-            <h3>Species: {{this.species}}</h3>
-            {{#gte this.age 5}}
-                Este perro tiene mas de cinco años
-                {{else}}
-                Este perro tiene MENOS de 5 años
-            {{/gte}}
-        </li>
-        {{/each}}
-    </ul>
+    <h1>BIENVENIDO A UPGRADE PETS</h1>
+    <a href="/login"><h1><b>LOGIN</b></h1></a>
+    <a href="/register"><h1><b>REGISTER</b></h1></a>
 </body>
 </html>
